# chunking_strategies

./: QUICKSTART.md  README.md  main.py  pyproject.toml
1-character-chunking/: README.md  llama_index_method.py
1character_chunking/: langchain_method.py
2-recursive-character/: README.md
2recursive_character/: langchain_method.py
3-document-specific/: README.md  language_splitter.py  markdown.py  pdf_with_images.py  pdf_with_tables.py  python_splitter.py  test.js
4-semantic-chunking/: README.md  mit.txt  semantic.py
5-cluster-semantic-chunking/: README.md  chunkers.py  chunking.py  utils.py
streamlit_app/: README.md  app.py  run_app.bat  sample_text.txt  unified_chunkers.py
streamlit_app/utils/: README.md  __init__.py  chunking.py  session_state.py  ui_components.py  visualization.py
