[project]
name = "chunking-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "llama-index>=0.14.3",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "poppler-utils>=0.1.0",
    "unstructured[all-docs]>=0.18.15",
]
